--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 .faded1 {
@@ -30,10 +31,24 @@
     background-color: var(--faded-5);
 }
 
+.navBar {
+    padding: 10px;
+    border-bottom: 1px solid black; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.container > a {
+text-decoration: none;
+color: black;
 }
 
 .dataBox {
@@ -41,6 +56,53 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 100vw;
+    width: 80vw;
+    height: 40px;
     margin: 5px 0px;
+    border-radius: 15px;
 }
+
+.dataBox:active {
+    box-shadow: 0px 0px 5px 5px var(--faded-3);
+}
+
+.lower {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.lower > button {
+    margin-bottom: 10px;
+}
+
+.loaderContainer {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.squareLoader {
+    --c:linear-gradient(var(--faded-3) 0 0);
+    background: 
+      var(--c) 0 0,
+      var(--c) 0 50%,
+      var(--c) 0 100%,
+      var(--c) 50% 0,
+      var(--c) 50% 50%,
+      var(--c) 50% 100%,
+      var(--c) 100% 0,
+      var(--c) 100% 50%,
+      var(--c) 100% 100%;
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    animation: sh1 .5s infinite alternate;
+  }
+  
+  @keyframes sh1 {
+    0%,20%  {width:45px;height: 45px}
+    90%,100%{width:65px;height: 65px}
+  }
