--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
     margin-bottom: 20px;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -99,7 +99,7 @@
     margin: 5px 0px;
 }
 
-.lower {
+.lower, .home {
     margin: 10px;
     display: flex;
     flex-direction: column;
@@ -110,7 +110,7 @@
     margin-bottom: 10px;
 }
 
-.styledButton, .lower > a {
+.styledButton, .lower > a, .home > a {
     border: 1px solid black;
     background-color: var(--faded-3);
     width: 150px;
@@ -119,7 +119,7 @@
     margin: 10px;
 }
 
-.styledButton > *, .lower > a{
+.styledButton > *, .lower > a, .home > a {
     display: flex;
     justify-content: center;
     align-items: center;
