--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@
     margin: 10px;
 }
 
-.styledButton > *, .lower > a, .home > a {
+.styledButton, .lower > a, .home > a {
     display: flex;
     justify-content: center;
     align-items: center;
