--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,19 @@
     --faded-3: #8EA4AB;
     --faded-4: #F27272;
     --faded-5: #A66F74;
+
+    --blue1: #F2F2F2;
+    --blue2: #C4D4F2;
+    --blue3: #99AFF2;
+    --blue4: #A6A6A6;
+    --blue5: #0D0D0D;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     font-family: 'Spline Sans', sans-serif;
+    background-color: var(--blue1);
 }
 
 .faded1 {
@@ -54,6 +61,7 @@
 
 .navBar {
     padding: 10px 20px;
+    height: 100px;
     border-bottom: 1px solid black; 
     box-shadow: 0px 0px 7px 0px black;
     display: flex;
@@ -62,6 +70,10 @@
     align-items: center;
     z-index: 2;
     margin-bottom: 20px;
+}
+
+.navBar > * {
+    color: var(--blue5);
 }
 
 .container {
@@ -73,12 +85,12 @@
 
 .container > a {
     text-decoration: none;
-    color: black;
+    color: var(--blue5);
     background-color: transparent;
 }
 
 .budget {
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .dataBox {
@@ -89,7 +101,7 @@
     width: 80vw;
     height: 40px;
     margin: 5px 0px;
-    border: 1px solid var(--faded-5);
+    border: 1px solid var(--blue5);
     border-radius: 15px;
 }
 
@@ -110,8 +122,9 @@
 .lower, .home {
     margin: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .lower > button {
@@ -119,12 +132,19 @@
 }
 
 .styledButton, .lower > a, .home > a {
-    border: 1px solid black;
+    border: none;
     background-color: var(--faded-3);
     width: 150px;
-    height: 40px;
-    border-radius: 15px;
+    height: 50px;
     margin: 10px;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.home > a {
+    font-size: 50px;
+    width: 300px;
+    height: 300px;
 }
 
 .styledButton > *, .styledButton, .lower > a, .home > a {
@@ -132,7 +152,8 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: black;;
+    color: var(--blue5);
+    background-color: var(--faded-3);
 }
 
 .loaderContainer {
